// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Nav List Page Snapshot : isSelect=false 1`] = `
<div>
  <ul
    class="nav-list-wrapper css-ge2mxv"
  >
    <li>
      <a
        class="mcm-link-unit css-1h5x3dy"
        href="/modules/Modal"
      >
        <span
          class="mcm-span-unit"
        >
          Modal
        </span>
      </a>
    </li>
    <li>
      <a
        class="mcm-link-unit css-1h5x3dy"
        href="/modules/Slick"
      >
        <span
          class="mcm-span-unit"
        >
          Slick
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Layout Nav List Page Snapshot : isSelect=true 1`] = `
<div>
  <ul
    class="nav-list-wrapper nav-list-select-wrapper css-16cbju7"
  >
    <li>
      <a
        class="mcm-link-unit css-1h5x3dy"
        href="/modules/Modal"
      >
        <span
          class="mcm-span-unit"
        >
          Modal
        </span>
      </a>
    </li>
    <li>
      <a
        class="mcm-link-unit css-1h5x3dy"
        href="/modules/Slick"
      >
        <span
          class="mcm-span-unit"
        >
          Slick
        </span>
      </a>
    </li>
  </ul>
</div>
`;
